src/objects/Summary_of_Sales_by_Quarters__x.object
<CustomObject>
    <description>Summary_of_Sales_by_Quarters</description>
    <externalDataSource>Northwind</externalDataSource>
    <externalName>Summary_of_Sales_by_Quarters</externalName>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>OrderID</description>
        <externalDeveloperName>OrderID</externalDeveloperName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <description>ShippedDate</description>
        <externalDeveloperName>ShippedDate</externalDeveloperName>
        <label>ShippedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <description>Subtotal</description>
        <externalDeveloperName>Subtotal</externalDeveloperName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Summary_of_Sales_by_Quarters</label>
    <pluralLabel>Summary_of_Sales_by_Quarters</pluralLabel>
</CustomObject>